# transcribe-audio

./: README.md  pyproject.toml
transcribe-audio/: __init__.py  transcribe.py
transcribe-audio/backends/: base.py  whisperx_backend.py
transcribe_audio/backends/: __init__.py  media.py
